# YASKbot

./: .env.sample  .gitignore  Cargo.toml  LICENSE  diesel.toml
src/: main.rs
src/commands/: mod.rs
src/database/: mod.rs  models.rs  schema.rs
src/database/commands/: servers.rs
src/database/migrations/2024-12-23-235904_basic_multitenancy/: down.sql  up.sql
src/database/queries/: servers.rs
src/tasks/: mod.rs
